--- a/styles/aluno1_feedbacks.css
+++ b/styles/aluno1_feedbacks.css
@@ -2,7 +2,7 @@ body {
     background-color: #DBDBDB;
 }
 
-header{
+header {
     display: flex;
     justify-content: center;
     flex-direction: row;
@@ -13,12 +13,17 @@ header{
     color: #FFFFFF;
 }
 
-.icone_esquerda{
+.icone_esquerda {
     display: flex;
     flex-direction: row;
     position: absolute;
     left: 2rem;
     filter: brightness(100);
+    align-items: center;
+}
+
+.icone_esquerda>a {
+    margin: 0.4rem;
 }
 
 main {
@@ -45,7 +50,7 @@ main {
     background-color: #53CF93;
 }
 
-.especificacoes{
+.especificacoes {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -57,17 +62,17 @@ main {
     align-items: center;
     justify-content: left;
     margin-left: 2rem;
-} 
+}
 
-.entrada > h2 {
+.entrada>h2 {
     margin-right: 1rem;
 }
 
-.entrada > img {
+.entrada>img {
     margin-right: 1rem;
 }
 
-.enviar{
+.enviar {
     display: flex;
     flex-direction: row;
     position: absolute;
@@ -80,11 +85,11 @@ main {
     background-color: #204F38;
 }
 
-.enviar > a {
+.enviar>a {
     color: #FFFFFF;
 }
 
-.enviar > img {
+.enviar>img {
     filter: brightness(100);
     margin-right: 1rem;
 }
