--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -3,8 +3,6 @@ body,
 html {
     width: 100%;
     height: 100%;
-    font-family: 'Josefin Sans', sans-serif;
-    background-color: #B8F0FF;
     overflow: hidden;
     position: relative;
     outline: none;
@@ -12,30 +10,23 @@ html {
 }
 
 .main {
-    position: absolute;
-    width: 730px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 400px;
     height: 420px;
-    top: 50%;
-    left: 50%;
     box-sizing: border-box;
-    transform: translate(-50%, -50%);
     transition: all 0.195s ease;
     transform-style: preserve-3d;
 }
 
-.main.is-rotated-left {
-    transform: translate(-50%, -50%) rotateY(-4deg);
-}
-
-.main.is-rotated-right {
-    transform: translate(-50%, -50%) rotateY(4deg);
+.sideb {
+    margin-bottom: 1rem;
 }
 
 .main .sideb,
 .main .right-wrapper {
     background-color: white;
-    width: 50%;
-    float: left;
     height: 100%;
     box-sizing: border-box;
     padding: 25px;
@@ -69,25 +60,6 @@ html {
     transform-origin: left center;
     transform: rotateY(110deg);
     transition: all 0.5s;
-}
-
-.main .right-wrapper.is-active {
-    transform: rotateY(0deg);
-}
-
-.main .right-wrapper .header {
-    text-align: left;
-    justify-content: center;
-}
-
-.main .right-wrapper .day {
-    font-size: 12em;
-    text-indent: -12px;
-    display: block;
-}
-
-.main .right-wrapper .month {
-    font-size: 2.5em;
 }
 
 .main .sideb .showDate {
