--- a/styles/play_area.css
+++ b/styles/play_area.css
@@ -1,73 +1,85 @@
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #DBDBDB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #DBDBDB;
 }
-
 
 header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  width: 100vw;
-  background-color: #204F38;
-  margin-bottom: 1rem;
-  color: #FFFFFF;
-  height: 2rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    background-color: #204F38;
+    margin-bottom: 1rem;
+    color: #FFFFFF;
+    height: 2rem;
 }
 
-.icone_esquerda{
-  position: absolute;
-  left: 2rem;
-  filter: brightness(100);
+.icone_esquerda {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    left: 2rem;
+    filter: brightness(100);
+    align-items: center;
 }
 
-header > img {
-  margin-right: 0.4rem;
+.icone_esquerda>a {
+    margin: 0.4rem;
 }
 
-header > h1 {
-  margin-left: 1.4rem;
+header>img {
+    margin-right: 0.4rem;
+}
+
+header>h1 {
+    margin-left: 1.4rem;
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-main > a {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid #000;
-  border-radius: 255px;
-  width: 10rem;
-  height: 2rem;
-  background-color: #53CF93;
+.calendar-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-main > h2 {
-  font-size: 2rem;
+.main>a {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #000;
+    border-radius: 255px;
+    width: 10rem;
+    height: 2rem;
+    background-color: #53CF93;
 }
 
-main > h3 {
-  margin-bottom: 1rem;
+main>h2 {
+    font-size: 2rem;
+    padding-bottom: 2rem;
 }
 
-main > img {
-  margin-bottom: 1rem;
+main>h3 {
+    margin-bottom: 1rem;
+}
+
+main>img {
+    margin-bottom: 1rem;
 }
 
 @media (max-width: 768px) {
-  header {
-    width: 100vw;
-  }
-
-  main > img {
-    width: 100vw;
-  }
+    header {
+        width: 100vw;
+    }
+    main>img {
+        width: 100vw;
+    }
 }
