--- a/styles/sugestoes_alunos.css
+++ b/styles/sugestoes_alunos.css
@@ -13,13 +13,18 @@ header {
     color: #FFFFFF;
 }
 
-.icone_esquerda{
+.icone_esquerda {
     display: flex;
     flex-direction: row;
     position: absolute;
     left: 2rem;
     filter: brightness(100);
-  }
+    align-items: center;
+}
+
+.icone_esquerda>a {
+    margin: 0.4rem;
+}
 
 main {
     display: flex;
@@ -29,16 +34,15 @@ main {
 }
 
 .titulo_pagina {
-    margin: 2rem; 
+    margin: 2rem;
 }
-
 
 nav {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin: 2rem;
-  }
+}
 
 .sugestao {
     display: flex;
@@ -60,7 +64,7 @@ nav {
     margin-left: 0.5rem;
 }
 
-.add_sugestao{
+.add_sugestao {
     position: absolute;
     right: 2rem;
     bottom: 2rem;
@@ -74,6 +78,5 @@ nav {
 @media screen and (max-width: 2000px) {
     .add_sugestao {
         bottom: 2rem;
-
     }
 }
